plugins {
    id("java")
    id("application")
}

group = "org.example"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
}

tasks.test {
    useJUnitPlatform()
    testLogging {
        events("passed", "skipped", "failed")
        showStandardStreams = false
    }
}

application {
    mainClass.set("freshlyground.cli.CompilerMain")
}

tasks.named<CreateStartScripts>("startScripts") {
    applicationName = "fgc"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}